# docusage

./: .gitignore  FUTURE_WORK.md  README.md  pyproject.toml
docusage/: __main__.py  analyzer.py  benchmarks.py  web.py
docusage/static/: app.css  app.js  index.html
tests/: README.md  basic_tests.py  tests.py
tests/docs/: Nonsensical.txt
