[tool.poetry]
name = "docusage"
version = "0.1.0"
description = "A system to analyze documents using Large Language Models (LLMs), providing summaries and contextual information based on user specified missions."
authors = ["JJ Ben-Joseph <jj@tensorspace.ai>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2"
unstructured = "^0.7"
openai = "^0.27"
pdf2image = "^1.16"
chromadb = "^0.3"
tiktoken = "^0.4"
fastapi = "^0.109"
python-multipart = "^0.0"
paper-qa = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.scripts]
docusage = "docusage:__main__.main"
docusage_benchmark = "docusage:benchmarks.main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
